<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1">

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:gravity="bottom"
            android:orientation="horizontal"
            android:scrollbars="none|vertical">

            <Button
                android:id="@+id/Button1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:drawable/btn_default"
                android:backgroundTint="@color/colorPrimary"
                android:onClick="onClick"
                android:text="@string/create"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <Button
                android:id="@+id/Button2"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_weight="1"
                android:background="@android:drawable/btn_default"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/delete"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <Button
                android:id="@+id/Button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_weight="1"
                android:background="@android:drawable/btn_default"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/modify"
                android:textColor="@android:color/white"
                android:textSize="14sp" />
        </LinearLayout>

        <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:smoothScrollbar="true" />

    </LinearLayout>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="7"
        android:orientation="horizontal">

        <Button
            android:id="@+id/Button5"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"


            android:backgroundTint="@color/colorPrimary"
            android:text="@string/gcc"
            android:textColor="@android:color/white"
            android:textSize="24sp" />
    </LinearLayout>
</LinearLayout>